exhibitors modal info version 2.0

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -62,11 +62,11 @@
 
 .modalimage {
 
-  max-width: 100%;
+  margin-right: 20%;
+  margin-left:  20%;
 
   img{
-    margin-left: 29%;
-    width: auto;
+    width: 100%;
   }
 }
 
