--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -17,7 +17,7 @@
   z-index: 100;
   text-align: center;
   font-family: $font-title;
-  font-size: 110%;
+  font-size: 100%;
   letter-spacing: 1.4px;
   text-transform: uppercase;
 
@@ -56,6 +56,14 @@
     }
   }
 }
+
+
+@media screen and (max-width: 1200px) {
+
+#navbar{
+    font-size: 0.7em;
+}
+} 
 
 @media screen and (max-width: $breakpoint-mobile-flipped) {
     #navbar{
