--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -7,11 +7,7 @@
 }
 
 .exhibitor-feed {
-  max-width: 100%;
-  height: 100%;
   display: flex;
-  flex-direction: column;
-  padding: 2em;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -20,8 +16,8 @@
   .exhibitor-box{
     display: inline-block;
     align-self: baseline;
-    width: 20vw;
-    padding: 1em 0em;
+    width: 200px;
+    padding: 2em 1em;
     cursor: pointer;
       .image-section{
         img{
@@ -131,7 +127,6 @@
 
 @media screen and (max-width: $breakpoint-mobile) {
 
-
   .modal-event-property{
     flex-direction: column;
     .icon_group{
@@ -140,28 +135,24 @@
   }
 
   .exhibitor-feed {
-    padding: 0%;
+    padding: 0em 10px;
+    .exhibitor-box {
+      width: 100px;
+      padding: 1em 1em;
+      .image-section{
+        width: 30vw;
+        max-height: 100%;
+        img{
+          display: block;
+          margin: auto;
+          max-height: 15vh;
+        }
+      }
+      p{
+        font-size: 11px;
+      }
   }
-  .exhibitor-item {
-    display: flex;
-    flex-direction: row;
-    padding: 1em;
   }
-
-  .image-section{
-    width: auto;
-    max-height: 100%;
-
-    img{
-      left: 50%;
-      top: 50%;
-      width: 100%;
-      height: auto;
-      //height: 100%;
-    }
-  }
-
-
 }
 
 // flipped phone
