--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -1,165 +1,85 @@
 @import '../../styles/_variables';
 
-.exhibitors {
-  width: 100%;
-  height:100%;
-  margin: auto;
-}
-
-.exhibitor-feed {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  vertical-align: bottom;
-
-  .exhibitor-box{
-    display: inline-block;
-    align-self: baseline;
-    width: 200px;
-    padding: 2em 1em;
-    cursor: pointer;
-      .image-section{
-        img{
-          display: block;
-          margin: auto;
-          max-height: 15vh;
-        }
-      }
-      p{
-        position: relative;
-        color: $licorice;
-        text-align: center;
-        font-size: 16px;
-        font-weight: bold;
-      }
-    }
-    .exhibitor-box:hover p{
-      text-decoration: underline;
-
-    }
-}
-
-.exhibitor-item {
-  display: flex;
-  flex-direction: row;
-  padding: 2em;
-
-  .image-section{
-    width: 40%;
-  }
-  .details-section{
-    width: 60%;
-    padding-left: 1em;
-
-    .name{
-      text-align: left;
-    }
-    .description {
-      text-align: left;
-      //display: none;
-    }
-    .event-property{
-      display: flex;
-      flex-direction: row;
-      .icon{
-        width: 25px;
-        height: 25px;
-      }
-      p{
-        margin: 0 0 0 5px;
-        text-align: left;
-      }
-    }
-  }
-}
-
-.exhibitor-item:hover{
-  cursor: pointer;
-  cursor: hand;
-}
-
-.comingEvents{
-  cursor: default;
-}
-
 .modalimage2 {
-
   margin-right: 20%;
   margin-left:  20%;
- padding-top: 5%;
-
+  padding-top: 5%;
   img{
     width: 100%;
   }
 }
-
-.modal-event-property{
-  padding-top: 1em;
-  padding-bottom: 1em;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  .icon{
-    width: 25px;
-    height: 25px;
-  }
-  .icon_group{
-    text-align: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-  p{
-    margin: 0 0 0 5px;
-  }
-}
-.modalinfo{
-  padding: 1em 1em;
-}
-
 .description2{
   margin-right: 5%;
   margin-left: 5%;
-
 }
-
-
-@media screen and (max-width: $breakpoint-mobile) {
-
-  .modal-event-property{
-    flex-direction: column;
-    .icon_group{
-      flex-direction: row;
-    }
-  }
-
+.exhibitors {
   .exhibitor-feed {
-    padding: 0em 10px;
-    .exhibitor-box {
-      width: 100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .exhibitor-box{
+      width: 200px;
       padding: 1em 1em;
-      .image-section{
-        width: 100px;
-        img{
-          display: block;
-          margin: auto;
-          max-height: 100px;
+      align-self: baseline;
+      cursor: pointer;
+        .image-container{
+          img{
+            display: block;
+            margin: auto;
+            max-height: 75px;
+          }
+        }
+        p{
+          color: $licorice;
+          text-align: center;
+          font-size: 14px;
+          font-weight: bold;
         }
       }
-      p{
-        font-size: 11px;
+      .exhibitor-box:hover p{
+        text-decoration: underline;
       }
-  }
   }
 }
 
+@media screen and (max-width: $breakpoint-mobile) {
+  .exhibitors {
+    .exhibitor-feed {
+      margin-top: 1em;
+      justify-content: space-around;
+      padding: 0em 1em;
+      .exhibitor-box {
+        width: 95px;
+        padding: 10px 5px 0px 5px;
+        .image-container{
+          img{
+            max-height: 40px;
+          }
+        }
+        p{
+          font-size: 10px;
+        }
+      }
+    }
+  }
+}
 // flipped phone
 @media screen and (max-width: $breakpoint-mobile-flipped) {
-  .modal-event-property{
-    flex-direction: column;
-    .icon_group{
-      flex-direction: row;
+  .exhibitors {
+    .exhibitor-feed {
+      padding: 1em 1em;
+      .exhibitor-box {
+        width: 100px;
+        padding: 5px 15px 5px 15px;
+        .image-container{
+          img{
+            max-height: 60px;
+          }
+        }
+        p{
+        }
+      }
     }
   }
 }
