--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -62,6 +62,7 @@
   .search-containter{
     position: relative;
     margin: auto;
+    margin-bottom: 5%;
     width: 50%;
     transform: translate(23%, 0%);
     input{
@@ -76,6 +77,12 @@
     border: 2px solid $melon;
     }
   }
+
+  .checkbox-filtering{
+    margin-left: 10%;
+    margin-right: auto;
+  }
+
   .exhibitor-feed {
     display: flex;
     flex-direction: row;
