--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -13,4 +13,5 @@ $body-font-family: $font-regular;
 $body-font-line-multiplier: 1.5;
 $card-title-size: 24px;
 $text-standard: 1em;
-
+$text-standard-mobile: 12px;
+$line-height-mobile: 130%;
