modal location exhib style update

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -26,16 +26,16 @@
     width: 125px;
     height: 125px;
     display: block;
-    padding: 0px 30px 0px 30px;
+    //padding: 0px 30px 0px 30px;
   }
   .icon_group{
     text-align: center;
     align-items: center;
     display: flex;
     flex-direction: row;
-    img{
-      padding-right: 5px;
-    }
+    //img{
+      //padding-right: 5px;
+    //}
     .location{
       //padding: 10px 0px;
     }
