--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -81,21 +81,37 @@
     justify-content: space-between;
     .exhibitor-box{
       width: 130px;
+      height: 130px;
       padding: 15px 10px 10px 10px;
-      align-self: baseline;
+      //align-self: baseline;
       cursor: pointer;
         .image-container{
+          width: 90%;
+          height: 80px;
+          margin-left: auto;
+          margin-right: auto;
           img{
             display: block;
-            margin: auto;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 40px;
+            transform: translate(0%, -50%);
             max-height: 75px;
+            //margin: auto;
           }
         }
         p{
+          width: 90%;
+          height: 50px;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top: -35px;
           color: $licorice;
           text-align: center;
+          line-height: 110%;
           font-size: 13px;
           font-weight: bold;
+
         }
       }
       .exhibitor-box:hover p{
@@ -110,42 +126,27 @@
       flex-direction: column;
     }
   }
-
-  .exhibitors {
-    .exhibitor-feed {
-      margin-top: 1em;
-      justify-content: space-around;
-      padding: 0em 1em;
-      .exhibitor-box {
-        width: 95px;
-        padding: 10px 5px 0px 5px;
-        .image-container{
-          img{
-            max-height: 40px;
-          }
-        }
-        p{
-          font-size: $text-standard-mobile;
-          line-height: $line-height-mobile;
-        }
-      }
-    }
-  }
 }
+
 // flipped phone
 @media screen and (max-width: $breakpoint-mobile-flipped) {
   .exhibitors {
     .exhibitor-feed {
-      padding: 1em 1em;
+      padding: 1em 10px;
       .exhibitor-box {
-        width: 100px;
+        width: 120px;
+        height: 105px;
         padding: 5px 15px 5px 15px;
         .image-container{
           img{
+            margin-top: 30px;
             max-height: 60px;
           }
         }
         p{
+          font-size: 11px;
+          margin-top: -45px;
+          line-height: $line-height-mobile;
         }
       }
     }
