--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -19,6 +19,8 @@
     display: flex;
     flex-direction: row;
     padding: 2em;
+    cursor: pointer;
+    cursor: hand;
     .image-section{
       width: 40%;
     }
@@ -30,7 +32,6 @@
         }
         .description {
           text-align: left;
-          //display: none;
         }
         .event-property{
             display: flex;
@@ -50,18 +51,15 @@
 .event-item:hover {
   cursor: pointer;
   cursor: hand;
+  .name{
+    text-decoration: underline;
+  }
 }
 .comingEvents{
   cursor: pointer;
   h2{
     color: $licorice;
   }
-  .name{
-    text-decoration: underline;
-    }
-    p{
-      text-align: center;
-    }
 }
 .thickline{
   hr{
@@ -82,34 +80,10 @@
   }
 }
 
-.modalimage {
+.modalimage-event {
   img{
     width: 100%;
   }
-}
-.modal-event-property{
-  padding-top: 1em;
-  padding-bottom: 1em;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  .icon{
-    width: 25px;
-    height: 25px;
-  }
-  .icon_group_event{
-    text-align: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-  p{
-    margin: 0 0 0 5px;
-  }
-}
-
-.modalinfo{
-  padding: 10px 10px;
 }
 .modalbutton{
   text-align: center;
@@ -143,29 +117,8 @@
     }
 }
 
+@media screen and (max-width: $breakpoint-mobile-flipped) {
 
-@media screen and (max-width: $breakpoint-mobile) {
-
-  .description{
-    font-size: $text-standard-mobile;
-    line-height: $line-height-mobile;
-  }
-  .modal-event-property{
-    flex-direction: column;
-    margin: 0em 1em;
-    .icon_group_event{
-      flex-direction: row;
-      margin: 0.25em 0em;
-      p {
-        font-size: 14px;
-      }
-
-      .icon {
-        margin-right: 1em;
-      } 
-
-    }
-  }
   .events-feed {
     padding: 0%;
   }
@@ -173,6 +126,9 @@
     display: flex;
     flex-direction: row;
     padding: 1em;
+    p {
+      font-size: $text-standard-mobile;
+    }
   }
   .image-section{
     width: auto;
@@ -186,16 +142,6 @@
     }
   }
   .name {
-    font-size: large;
+    font-size: 16px;
   }
 }
-
-// flipped phone
-@media screen and (max-width: $breakpoint-mobile-flipped) {
-    .modal-event-property{
-      flex-direction: column;
-      .icon_group{
-        flex-direction: row;
-      }
-    }
-  }
