--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -56,22 +56,44 @@
 .modalcontent {
   overflow-wrap: break-word;
   text-align: justify;
-
+  .modalinfo{
+  padding: 1em 10px 1em 10px;
+  }
+  .modal-property{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 25% 20px 25%;
+    .icon{
+      width: 25px;
+      height: 25px;
+    }
+    .icon_group{
+      text-align: center;
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      margin: 0.15em 0em;
+    }
+    p{
+      margin: 0 0 0 5px;
+    }
+  }
   .description {
-    padding: 0em 4em;
-    margin: 0em auto;
-    max-width: 550px;
+      padding: 0em 4em;
+      margin: 0em auto;
+      max-width: 550px;
+      p{
+        line-height: 120%;
+        margin-bottom: 0;
+      }
   }
 }
 
-
-
-@media screen and (max-width: $breakpoint-mobile) {
+@media screen and (max-width: $breakpoint-mobile-flipped) {
 
   .popup {
     width: 90vw;
   }
-
   .cross {
     position: fixed;
     background-color: $grape;
@@ -79,13 +101,23 @@
     top: 0px;
   }
   .modalcontent {
+    .modalinfo{
+      h3{
+        font-size: 20px;
+      }
+      .icon{
+        width: 20px;
+        height: 20px;
+      }
+    }
     p {
       font-size: $text-standard-mobile;
       line-height: $line-height-mobile;
     }
-
     .description {
-      padding: 0em 1em;
+      padding: 0em 2em;
+      font-size: $text-standard-mobile;
+      line-height: $line-height-mobile;
     }
   }
     .shade {
