new event rsvp button

--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -96,12 +96,31 @@
     text-align: center;
     font-size: 16px;
     padding: 20px;
+    width: 250px;
     transition: all 0.5s;
     margin: 5px;
     cursor: pointer;
     }
-    .rsvpbutton:hover{
-      text-decoration: underline;
+    .rsvpbutton span{
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
+    }
+    .rsvpbutton span:after{
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.5s;
+    }
+    .rsvpbutton:hover span{
+      padding-right: 25px;
+    }
+    .rsvpbutton:hover span:after{
+      opacity: 1;
+      right: 0;
     }
     .rsvpclosed{
       display: inline-block;
