--- a/src/layouts/Exhibitors/index.scss
+++ b/src/layouts/Exhibitors/index.scss
@@ -2,8 +2,10 @@
 
 .Exhibitors-container {
   position: static;
+  //min-width: 650px;
   max-width: 850px;
   margin: auto;
+  padding: 0em 1em 0em 1em;
 }
 
 .content{
