--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -29,24 +29,34 @@
     .location{
     }
 
-.exhibitors {
+.exhibitors  {
    padding-top: 1em;
    .filter-special{
      display: flex;
      flex-direction: row;
      justify-content: center;
+		 #quality{
+
+		 }
      img{
        padding: 10px;
        height: 80px;
        width: 80px;
+			 cursor: pointer;
        -webkit-transform: scale(1);
 	     transform: scale(1);
 	     -webkit-transition: .3s ease-in-out;
 	     transition: .3s ease-in-out;
      }
      img:hover{
-       -webkit-transform: scale(1.3);
-	      transform: scale(1.3);
+			 -webkit-transition: .3s ease-in-out;
+	     transition: .3s ease-in-out;
+       -webkit-transform: scale(1.25);
+	      transform: scale(1.25);
+				.exhibitor-box{
+					-webkit-transform: scale(1.25);
+	 	      transform: scale(1.25);
+				}
      }
    }
   .search-containter{
@@ -76,6 +86,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+		padding-bottom: 3em; 
     .exhibitor-box{
 			margin: 0em 5px 0em 5px;
 			overflow: hidden;
@@ -133,14 +144,15 @@
     }
     .exhibitor-box.green{
 			box-shadow: 1px 1px $light-grey;
-      position: relative;
       border: 1px solid $melon;
     }
       .exhibitor-box:hover{
         -webkit-transform: scale(1.1);
  	      transform: scale(1.07);
       }
-      .exhibitor-box.green::before{
+      .exhibitor-box.green::before,
+			.exhibitor-box.red::before,
+			.shine-loop::before {
         position: absolute;
       	top: 0;
       	left: -50%;
@@ -154,29 +166,38 @@
       	-webkit-transform: skewX(-25deg);
       	transform: skewX(-25deg);
       }
-      .exhibitor-box.green:hover::before{
+      .exhibitor-box.green:hover::before,
+			.exhibitor-box.red:hover::before {
         -webkit-animation: shine .6s;
       	animation: shine .6s
       }
-      .exhibitor-box.red::before{
-        position: absolute;
-      	top: 0;
-      	left: -50%;
-      	z-index: 2;
-      	display: block;
-      	content: '';
-      	width: 50%;
-      	height: 100%;
-      	background: -webkit-linear-gradient(left, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0) 100%);
-      	background: linear-gradient(to right, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0) 100%);
-      	-webkit-transform: skewX(-25deg);
-      	transform: skewX(-25deg);
-      }
-      .exhibitor-box.red:hover::before{
-        -webkit-animation: shine .6s;
-      	animation: shine .6s
-      }
+			.shine-loop::before {
+				-webkit-animation: shine .6s infinite;
+      	animation: shine .6s infinite;
+			}
     }
+
+		.filter-special:hover{
+			overflow: hidden;
+			img::before{
+        position: absolute;
+      	top: 0;
+      	left: -50%;
+      	z-index: 2;
+      	display: block;
+      	content: '';
+      	width: 50%;
+      	height: 100%;
+      	background: -webkit-linear-gradient(left, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0) 100%);
+      	background: linear-gradient(to right, rgba(1,1,1,0.8) 0%, rgba(255,255,255,0) 100%);
+      	-webkit-transform: skewX(-25deg);
+      	transform: skewX(-25deg);
+      }
+      img:hover::before{
+        -webkit-animation: shine .6s;
+      	animation: shine .6s
+      }
+		}
 }
 // flipped phone
 @media screen and (max-width: $breakpoint-mobile-flipped) {
@@ -184,6 +205,7 @@
     .exhibitor-feed {
       padding: 1em 10px;
       .exhibitor-box {
+				overflow: hidden;
         width: 120px;
         height: 105px;
         .image-container{
